fixed striped background on containers with scrollbar - close #992

--- a/src/themes/default-dark/style.css
+++ b/src/themes/default-dark/style.css
@@ -357,6 +357,8 @@
   background: #555555;
 }
 .jstree-default-dark > .jstree-striped {
+  min-width: 100%;
+  display: inline-block;
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAkCAMAAAB/qqA+AAAABlBMVEUAAAAAAAClZ7nPAAAAAnRSTlMNAMM9s3UAAAAXSURBVHjajcEBAQAAAIKg/H/aCQZ70AUBjAATb6YPDgAAAABJRU5ErkJggg==") left top repeat;
 }
 .jstree-default-dark > .jstree-wholerow-ul .jstree-hovered,
