--- a/src/themes/default/style.css
+++ b/src/themes/default/style.css
@@ -357,6 +357,8 @@
   background: #e7f4f9;
 }
 .jstree-default > .jstree-striped {
+  min-width: 100%;
+  display: inline-block;
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAkCAMAAAB/qqA+AAAABlBMVEUAAAAAAAClZ7nPAAAAAnRSTlMNAMM9s3UAAAAXSURBVHjajcEBAQAAAIKg/H/aCQZ70AUBjAATb6YPDgAAAABJRU5ErkJggg==") left top repeat;
 }
 .jstree-default > .jstree-wholerow-ul .jstree-hovered,
